test/darwin/fail/gettimeofday01.v3
//@execute = true
component gettimeofday01 {
	def main() -> bool {
		var timeval: Pointer, timezone: Pointer;
		return Darwin.gettimeofday(timeval, timezone).0 < 0; // invalid (null) arguments
	}
}
